# pokemcp

./: .gitignore  README.md  pyproject.toml  server.py
tools/: tool_get_pokemon_info.py
